@@ -66,6 +66,15 @@ Working version
 
 ### Bug fixes:
 
+* #12145: Loopy constraints cause ocamlc to loop.
+  Fixed by completely removing the call to `update_type` in
+  `Typedecl.transl_type_decl`, as the expansion is already checked by
+  `check_regularity`. As a result, recursion is more polymorphic,
+  which may cause some (essentialy wrong) type declarations to have
+  unbound type variables, and some constraints unrelated to the concrete
+  type to be ignored (see tests/typing-misc/constraints.ml).
+  (Jacques Garrigue, report by Richard Eisenberg, review by Leo White)
+
 - #12255, #12256: Handle large signal numbers correctly (Nick Barnes,
    review by David Allsopp).
 
